# NEXO

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  mainK.cpp  setup_linux.sh  setup_win.sh
include/: HeapFile.h  IndexManager.h  Serializer.h  StorageManager.h  parser.h  tokenizer.h
include/B-tree/: IndexManager.h
include/Core/: Types.h
include/Storage/: HeapFile.h  Serializer.h  StorageManager.h
include/query_engine/: QueryExecutor.h  parser.h  tokenizer.h
src/: HeapFile.cpp  IndexManager.cpp  Serializer.cpp  StorageManager.cpp  main.cpp  parser.cpp  tokenizer.cpp
src/B-tree/: IndexManager.cpp
src/Query_engine/: QueryExecutor.cpp  parser.cpp  tokenizer.cpp
src/Storage/: HeapFile.cpp  Serializer.cpp  StorageManager.cpp
